Fix img link underline

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -122,3 +122,8 @@ button:hover {
     color: #b90000;
     background: 0 0;
 }
+
+.content .img-link {
+    color: #b90000;
+    background: 0 0;
+}
