--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -1,3 +1,7 @@
+.container.page article {
+    text-align: inherit;
+}
+
 .avatar img {
     border-radius: 0 !important;
 }
@@ -127,3 +131,4 @@ button:hover {
     color: #b90000;
     background: 0 0;
 }
+
