--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -1,30 +1,51 @@
-.container.page article {
-    text-align: inherit;
+$link-color: #1565c0;
+$light-background: #fafafa;
+$light-foreground: #212121;
+$dark-background: #212121;
+$dark-foreground: #dadada;
+
+.content article p {
+    text-align: initial !important;
+}
+
+.list ul li .title a {
+    color: $link-color;
+}
+
+.list ul li .date {
+    flex: 0.5;
 }
 
 .avatar img {
     border-radius: 0 !important;
 }
 
-.img-rounded {
-    border-radius: 4px;
-}
 
-.img-thumbnail {
-    padding: 4px;
-    line-height: 1.625;
-    background-color: #ffffff;
-    border: 1px solid #dddddd;
-    border-radius: 3px;
-    transition: all 0.2s ease-in-out;
-    display: inline-block;
-    width: 100% \9;
-    max-width: 100%;
-    height: auto;
-}
+img {
+    &.img-rounded {
+        border-radius: 4px;
+    }
 
-.img-circle {
-    border-radius: 50%;
+    &.img-thumbnail {
+        margin: 20px;
+        padding: 4px;
+        line-height: 1.625;
+        border: 1px solid $light-foreground;
+        border-radius: 3px;
+        transition: all 0.2s ease-in-out;
+        display: inline-block;
+        width: 100% \9;
+        max-width: 100%;
+        height: auto;
+
+        @media (prefers-color-scheme: dark) {
+            border: 1px solid $dark-foreground;
+        }
+    }
+
+    &.img-circle {
+        border-radius: 50%;
+    }
 }
 
 .alignleft {
@@ -41,4 +62,37 @@
 
 .textright {
     text-align: left;
+}
+
+input[type=text],
+input[type=email],
+input[type=tel],
+select,
+textarea {
+    width: 100%;
+    padding: 12px 20px;
+    border-radius: 4px;
+    margin-top: 10px;
+    resize: vertical;
+    background-color: $light-background;
+    color: $light-foreground;
+    border: 1px solid $light-foreground;
+
+    @media (prefers-color-scheme: dark) {
+        background-color: $dark-background;
+        color: $dark-foreground;
+        border: 1px solid $dark-foreground;
+    }
+}
+
+input[type=submit],
+button {
+    background-color: $link-color;
+    color: $light-background;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 9px;
+    width: 100%;
 }
