Clean up composition css

--- a/assets/composition.scss
+++ b/assets/composition.scss
@@ -63,3 +63,23 @@
 .flex-shrink-none {
     flex-shrink: 0;
 }
+
+.float-right {
+    float: right;
+}
+
+.float-left {
+    float: left;
+}
+
+.text-left {
+    text-align: right;
+}
+
+.text-right {
+    text-align: left;
+}
+
+.text-center {
+    text-align: center;
+}
